# qshield

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  justfile  package.json  pnpm-lock.yaml
.cargo/: audit.toml  config.toml
.github/workflows/: main.yml  pr-check.yml  release.yml
apps/auth-dashboard/: package.json
apps/proxy-dashboard/: package.json
apps/vault-desktop/: package.json
apps/vault-extension/: package.json
apps/vault-web/: package.json
bindings/node/: Cargo.toml  index.js  package.json
bindings/node/__test__/: index.spec.mjs
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/qshield/: __init__.py  qshield.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_qshield.py
bindings/wasm/: Cargo.toml
crates/qshield-auth/: Cargo.toml
crates/qshield-auth/src/: main.rs
crates/qshield-common/: Cargo.toml
crates/qshield-common/src/: error.rs  id.rs  lib.rs  logging.rs  redacted.rs  telemetry.rs
crates/qshield-core/: Cargo.toml
crates/qshield-core/benches/: aead.rs  dsa.rs  hybrid.rs  kdf.rs  kem.rs
crates/qshield-core/src/: aead.rs  dsa.rs  hybrid.rs  hybrid_sig.rs  kdf.rs  kem.rs  lib.rs  wire.rs  zeroize_audit.rs
crates/qshield-proxy/: Cargo.toml
crates/qshield-vault-api/: Cargo.toml
crates/qshield-vault-api/src/: main.rs
deploy/docker/: Dockerfile.qshield-auth  Dockerfile.qshield-proxy  Dockerfile.qshield-vault-api
