[package]
name = "qshield-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js / TypeScript bindings for qshield-core via NAPI-RS (QS-110)"

[lib]
name = "qshield_node"
crate-type = ["cdylib"]

[dependencies]
qshield-core.workspace = true
qshield-common.workspace = true
napi.workspace = true
napi-derive.workspace = true
rand.workspace = true
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }

[build-dependencies]
napi-build = "1"
