[package]
name = "qshield-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Python bindings for qshield-core via PyO3 (QS-109)"

[lib]
name = "qshield"
crate-type = ["cdylib"]

[dependencies]
qshield-core.workspace = true
qshield-common.workspace = true
pyo3.workspace = true
rand.workspace = true
rand_core.workspace = true
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
