[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "qshield"
version = "0.1.0"
description = "Post-quantum cryptography for Python — ML-KEM, ML-DSA, hybrid X25519+Kyber, AES-256-GCM, ChaCha20-Poly1305, HKDF-SHA3-256"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
keywords = ["cryptography", "post-quantum", "kyber", "dilithium", "ML-KEM", "ML-DSA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.maturin]
# The Rust crate to build (manifest-path from the workspace root).
manifest-path = "bindings/python/Cargo.toml"
# Python module name matches the `#[pymodule]` function name.
module-name = "qshield.qshield"
# Emit Python type stubs.
features = ["pyo3/extension-module"]
# Place generated stubs alongside the extension.
python-source = "python"
