[package]
name = "qshield-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Post-quantum cryptography primitives: ML-KEM, ML-DSA, hybrid modes"

[dependencies]
qshield-common.workspace = true
# ml-kem and ml-dsa depend on rand_core 0.6; use that version directly here
# so OsRng is compatible with the PQC crates' trait bounds.
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize.workspace = true
subtle.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ml-kem = { version = "0.2.3", features = ["zeroize"] }
ml-dsa = { version = "0.0.4", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
static_assertions = "1"

[[bench]]
name = "kem"
harness = false

[[bench]]
name = "dsa"
harness = false
