[package]
name = "qshield-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Post-quantum cryptography primitives: ML-KEM, ML-DSA, hybrid modes"

[dependencies]
qshield-common.workspace = true
# ml-kem uses rand_core 0.6; ml-dsa 0.1.x uses rand_core 0.10 (via getrandom 0.4).
# Both versions coexist -- rand_core 0.6 OsRng is used in kem.rs/hybrid.rs.
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
zeroize.workspace = true
subtle.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ml-kem = { version = "0.2.3", features = ["zeroize"] }
ml-dsa = { version = "0.1.0-rc.8", features = ["zeroize", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ed25519-dalek.workspace = true
hkdf = "0.12"
sha2 = "0.10"
sha3.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
crc32c.workspace = true
base64.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
serde_json.workspace = true
static_assertions = "1"

[[bench]]
name = "kem"
harness = false

[[bench]]
name = "dsa"
harness = false

[[bench]]
name = "hybrid"
harness = false

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "kdf"
harness = false
