[package]
name = "qshield-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Drop-in PQC-hybrid TLS termination proxy"

[[bin]]
name = "qshield-proxy"
path = "src/main.rs"

[dependencies]
qshield-common.workspace = true
qshield-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
